# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = derl
description = Dead URLs Searcher
author = Thomas Piekarski
author-email = t.piekarski@deloquencia.de
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/tpiekarski/derl
platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

setup_requires = pyscaffold>=3.2a0,<3.3a0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    derl = derl.main:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov derl --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.2.3
package = derl
extensions =
    markdown
    travis
