# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = derl
description = Dead URLs Searcher
author = Thomas Piekarski
author-email = t.piekarski@deloquencia.de
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/tpiekarski/derl
platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

python_requires = >= 3.6
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = 
    certifi==2020.4.5.2
    chardet==3.0.4
    decorator==4.4.2
    idna==2.9
    pkg-resources==0.0.0
    python-magic==0.4.18
    requests==2.24.0
    six==1.15.0
    urllib3==1.25.9
    validators==0.15.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest-cov==2.10.0
    pytest==5.4.3

[options.entry_points]
console_scripts =
    derl = derl.main:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov derl --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.2.3
package = derl
extensions =
    markdown
    travis
