# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = derl
description = Dead URLs Searcher
author = Thomas Piekarski
author-email = t.piekarski@deloquencia.de
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/tpiekarski/derl
platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

python_requires = >= 3.6
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = 
    aiohttp==3.7.4
    aiohttp-retry==1.0
    astroid==2.4.2
    async-timeout==3.0.1
    attrs==19.3.0
    certifi==2020.4.5.2
    chardet==3.0.4
    coverage==5.2
    decorator==4.4.2
    idna==2.9
    importlib-metadata==1.7.0
    lazy-object-proxy==1.4.3
    mccabe==0.6.1
    more-itertools==8.4.0
    multidict==4.7.6
    packaging==20.4
    pluggy==0.13.1
    py==1.9.0
    pycodestyle==2.6.0
    pyparsing==2.4.7
    python-magic==0.4.18
    pyyaml==5.3.1
    six==1.15.0
    toml==0.10.1
    typed-ast==1.4.1
    urllib3==1.26.5
    validators==0.15.0
    wcwidth==0.2.5
    wheel==0.34.2
    wrapt==1.12.1
    yarl==1.4.2
    zipp==3.1.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    aiounittest==1.4.0
    pytest-cov==2.10.0
    pytest==5.4.3
    python-coveralls==2.9.3

[options.entry_points]
console_scripts =
    derl = derl.main:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov derl --cov-branch --cov-report term-missing --cov-report xml:coverage.xml
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.2.3
package = derl
extensions =
    markdown
    travis
